initial scafolding for HTTP sampler